# InsuranceCompliance

./: .gitignore  404_ERROR_FIX.md  ARCHITECTURE_CLARIFICATION.md  ARCHITECTURE_FIXED.md  BACKEND_INTEGRATION_GUIDE.md  BUG_FIXES.md  CHAT_CONTEXT_FIX.md  COMPONENT_MAP.md  DESIGN_DOCUMENT.md  EDGE_CASE_FIXES_SUMMARY.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  FRONTEND_PROGRESS.md  FRONTEND_SUCCESS.md  FRONTEND_SUMMARY.md  FRONTEND_TESTING_GUIDE.md  GROQ_SPEEDUP_GUIDE.md  HOW_TO_RUN.md  IEEE_RESEARCH_PAPER.md  IEEE_RESEARCH_PAPER_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  LATEST_BUG_FIXES.md  MIGRATION_SCRIPTS_FIXED.md  NEXTJS_FRONTEND_IMPLEMENTATION_PLAN.md  PHASE2_INTEGRATION_SUMMARY.md  PROJECT_OVERVIEW.md  PYDANTIC_VALIDATION_FIX.md  QUICK_FIX_GUIDE.md  QUICK_START_GUIDE.md  QUICK_TEST_REFERENCE.md  REMAINING_EDGE_CASES.md  REPOSITORY_GUIDE.md  RESTRUCTURE_IMPLEMENTATION.md  RESTRUCTURE_PLAN.md  SAFE_MIGRATION_GUIDE.md  SOLUTION_SUMMARY.md  STARTUP_GUIDE.md  SUPABASE_DATABASE_MIGRATION_SUMMARY.md  SUPABASE_TESTING_GUIDE.md  SYSTEM_EVALUATION_REPORT.md  TEST_CONSOLIDATION_SUMMARY.md  (+21 more)
api/: main.py
backend/: ARCHITECTURE_VISUAL.md  IMPLEMENTATION_CHECKLIST.md  IRDAI_ENHANCEMENT_TEST_RESULTS.md  QUICKSTART_RAG_LLAMA.md  QUICK_COMMANDS.md  RAG_LLAMA_GUIDE.md  RAG_LLAMA_IMPLEMENTATION_COMPLETE.md  SMART_SCRAPER_GUIDE.md  SMART_SCRAPER_SUMMARY.md  VISUAL_SUMMARY.md  compare_systems.py  phase1_domain_adaptation_optimized.py  phase2_classification_training.py  readme.md  scraper.py  smart_scraper.py  test_irdai_enhanced.py  test_irdai_quick.py  test_pagination.py  (+2 more)
(+152 files in other folders)
